2013-10-08  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/leads/lead_detail.php,
	  operation/projects/people_manager.php,
	  operation/projects/project_detail.php,
	  operation/projects/project_timegraph.php,
	  operation/projects/user_project_timegraph.php,
	  operation/user_report/monthly.php,
	  operation/user_report/report_annual.php,
	  operation/user_report/report_full.php,
	  operation/users/user_spare_workunit.php,
	  operation/users/user_task_assigment.php,
	  operation/workorders/wo.php: Now the users introduced in
	  the user inputs must exist.
	
	* operation/user_report/report_full.php: Fixed a critical PHP
	error.
	  
2013-10-08  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/wiki/lionwiki_lib.php,
	  operation/companies/company_detail.php,
	  operation/incidents/incident_detail.php,
	  operation/incidents/incident_search_logic.php,
	  operation/inventories/inventory_detail.php,
	  operation/inventories/inventory_search.php,
	  operation/leads/lead_detail.php: Now the users introduced in
	  the user inputs must exist.
	
	* operation/invoices/invoice_detail.php: Fixed an error.
	
	* operation/contracts/contract_detail.php: Deleted some code.
	
	* operation/companies/company_detail.php: Deleted the columns
	'SLA' and 'Group' and added the comumn 'Status'.
	
	* include/functions_inventories.php: Added a line break after
	the under tabs info in the function "print_inventory_tabs".
	
2013-10-07  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/invoices/invoice_detail.php: ACL fix.
	
2013-10-07  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/migrate.sql: Added the column 'show_in_list' in the
	table 'tincident_type'.
	
	* operation/incidents/type_detail.php: Added the value
	'show in list' to the incident types.
	
	* include/functions_incidents.php: Improved the function
	"incident_get_type_field_values" to exclude a field type.
	Now the incident field values are showed in the incident